--- a/templates/article.html
+++ b/templates/article.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta content="NanoWIKI (https://github.com/Paddyk45/nanowiki)" name="generator">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
     <title>{{ title }} | {{ crate::INSTANCE_NAME }}</title>
 </head>
@@ -11,7 +14,9 @@
     <h1 class="article-title-heading">{{ title }}</h1>
     <a href="/articles/{{ title }}/edit" class="dark">[edit]</a>
 </div>
+<div class="centered-text">
 {{ body }}
+</div>
 <br>
 <a href="/" class="dark">[ Go back to home page ]</a>
 </body>
