--- a/templates/edit.html
+++ b/templates/edit.html
@@ -7,13 +7,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
-    <title>Edit {{ title }} | {{ crate::INSTANCE_NAME }}</title>
+    <title>Edit {{ article.title }} | {{ crate::INSTANCE_NAME }}</title>
     <script>
         async function onSubmit() {
             let contentTextArea = document.getElementById("content");
             let content = contentTextArea.value;
-            let updateUrl = "/articles/" + encodeURIComponent("{{ title }}");
-            let body = "content=" + encodeURIComponent(content) + "&pw=" + encodeURIComponent(document.getElementById("password").value);
+            let updateUrl = "/articles/" + encodeURIComponent("{{ article.title }}");
+            //{% if !is_creation %}
+            if (content === "" && confirm("Are you sure that you want to delete this article?")) {
+                let res = await fetch(
+                    updateUrl, {
+                        method: "DELETE",
+                        body: `pw=${document.getElementById("password").value}`
+                    });
+                if (res.ok) window.location.href = "/";
+                else document.getElementById("submit").textContent = "Failed to delete";
+                return;
+            }
+            //{% endif %}
+            let body = `content=${encodeURIComponent(content)}&pw=${encodeURIComponent(document.getElementById("password").value)}`;
             let res = await fetch(
                 updateUrl, {
                 method: "POST",
@@ -22,22 +34,17 @@
                     },
                 body: body
             });
-            if (res.ok) {
-                window.location = "/articles/" + encodeURIComponent("{{ title }}");
-            }
-            else {
-                let submitBtn = document.getElementById("submit")
-                submitBtn.textContent = "Failed to submit"
-            }
+            if (res.ok) window.location = "/articles/" + encodeURIComponent("{{ article.title }}");
+            else document.getElementById("submit").textContent = `Failed to submit (${res.statusText})`;
         }
     </script>
 </head>
 <body>
-<h1 class="title">Edit {{ title }}</h1>
-<label for="content">New content:</label>
+<h1 class="title">Edit {{ article.title }}</h1>
+<label for="content">New content{% if !is_creation %} (leave empty to delete){% endif %}:</label>
 <br>
 <br>
-    <textarea id="content" rows="20" cols="40">{{ body }}</textarea>
+    <textarea id="content" rows="20" cols="40">{{ article.body }}</textarea>
     <br>
     <button onclick="onSubmit()" id="submit">Submit</button>
 {% if !crate::EDIT_PASSWORD.is_empty() %}
