--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,8 @@ code {
 textarea {
     background-color: #283040;
     color: white;
+    outline: none;
+    border: none;
 }
 
 ul.dashed {
@@ -45,29 +47,14 @@ ul.dashed > li:before {
     color: #878477;
 }
 
-input {
-    font-family: monospace;
+input, button {
     background-color: #0d1017;
     color: #bfbdb6;
     border: 1px solid #234;
-    font-size: inherit;
     padding: 0.25rem;
+    outline: none;
 }
 
-button {
-    font-family: monospace;
-    background-color: #0d1017;
-    color: #bfbdb6;
-    border: 1px solid #234;
-    font-size: inherit;
-    padding: 0.25rem;
-}
-
-button:hover {
-    font-family: monospace;
-    background-color: #0d1017;
-    color: #bfbdb6;
+input:hover, button:hover {
     border: 1px solid #e6b450;
-    font-size: inherit;
-    padding: 0.25rem;
 }
