add social media embed

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta content="NanoWIKI (https://github.com/Paddyk45/nanowiki)" name="generator">
+    <meta content="Edit '{{ title|e("html") }}' on {{ crate::INSTANCE_NAME|e("html") }}" property="og:title">
+    <meta content="Edit an article on NanoWIKI" property="og:description">
+    <meta content="/logo.png" property="og:image">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
