--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="NanoWIKI (https://github.com/Paddyk45/nanowiki)" name="generator">
-    <meta content="Edit '{{ title|e("html") }}' on {{ crate::INSTANCE_NAME|e("html") }}" property="og:title">
+    <meta content="Edit '{{ article.title|e("html") }}' on {{ crate::INSTANCE_NAME|e("html") }}" property="og:title">
     <meta content="Edit an article on NanoWIKI" property="og:description">
     <meta content="/logo.png" property="og:image">
     <link rel="preconnect" href="https://fonts.googleapis.com">
