--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="NanoWIKI (https://github.com/Paddyk45/nanowiki)" name="generator">
     <meta content="Edit '{{ article.title }}' on {{ crate::INSTANCE_NAME }}" property="og:title">
     <meta content="Edit an article on NanoWIKI" property="og:description">
