--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="NanoWIKI (https://github.com/Paddyk45/nanowiki)" name="generator">
-    <meta content="{{ crate::INSTANCE_NAME|e("html") }}" property="og:title">
+    <meta content="{{ crate::INSTANCE_NAME }}" property="og:title">
     <meta content="Read awesome articles on this NanoWIKI instance" property="og:description">
     <meta content="/logo.png" property="og:image">
     <link rel="preconnect" href="https://fonts.googleapis.com">
