--- a/static/style.css
+++ b/static/style.css
@@ -72,3 +72,9 @@ input:hover, button:hover {
     padding-left: 20px;
     max-width: 1000px;
 }
+
+blockquote {
+	margin: 1em 6px;
+	border-left: 2px solid #999;
+	padding-left: 1em;
+}
